--- a/_posts/2025-02-16-멋사-합격.md
+++ b/_posts/2025-02-16-멋사-합격.md
@@ -32,13 +32,24 @@ tags:
 
 작년에 빅데이터 학회 BDA에서 '데이터 분석 기초' 과정을 수료하며 마케팅 특강을 들은 적 있다.  
 그때를 계기로 마케터에 관심이 생겼지만 어떤 것을 해야 할지는 막연한 상태. .
-이후 그냥 3학년을 다니다가 개인적 이유로 휴학을 하게 되고, 올해 복학을 하려 했는데 ? ! 멋사 그로스 마케팅 부트캠프를 알게 된 것이다.
+이후 그냥 3학년을 다니다가  
+개인적 이유로 휴학을 하게 되고, 올해 복학을 하려 했는데 ? ! 멋사 그로스 마케팅 부트캠프를 알게 된 것이다.
 
 마침 이미 국민내일배움카드를 발급했었기에 바로 지원👊  
-다른 과정들은 간단한 시험이나 면접도 있다고 들었는데 그로스 마케팅은 지원서만 제출하면 끝이었다. 지원서에는 지원 동기, 부트캠프 이후의 목표 등을 적도록 되어있었다.  
+다른 과정들은 간단한 시험이나 면접도 있다고 들었는데 그로스 마케팅은 지원서만 제출하면 끝이었다.  
+지원서에는 지원 동기, 부트캠프 이후의 목표 등을 적도록 되어있었고 거의 다 꽉꽉 채워 적었다.  
 제출하고나선 연락이 언제 올까 두근두근
 
 며칠 후, 드디어 문자가 왔다!
 ![Image](https://github.com/user-attachments/assets/c4f84ede-e5eb-4043-90a6-48dd2b00b7b1)
 후후 합격✌️
 
+### **후기**
+---
+
+듀얼 모니터로 만반의 준비를 마치고 수업 첫 날이 시작되었다. 줌 강의실, 디스코드, 수업 자료를 모두  
+켜 놔야 해서 모니터는 필수다. 확실히 대부분 취업을 목표로 하는 수강생들이기 때문에 수업 참여도가 굉장히 높았고 다들 질문도 적극적이었다. (물론 교육기간 초반이라 더 그런 것도. .)  
+아직까지는 기초 수업이라 들을 만 하다. 수업을 들으며 열심히 colab에 정리를 하고 수업이 끝나면  
+Github에 업로드 한다. 
+![Image](https://github.com/user-attachments/assets/fabd022d-1c1f-49c4-be35-f007ed8f4ffe)
+ ⬆️ 요런 식으로
