--- a/_posts/2025-02-16-멋사-합격.md
+++ b/_posts/2025-02-16-멋사-합격.md
@@ -53,3 +53,5 @@ tags:
 Github에 업로드 한다. 
 ![Image](https://github.com/user-attachments/assets/fabd022d-1c1f-49c4-be35-f007ed8f4ffe)
  ⬆️ 요런 식으로
+
+앞으로는 colab에 정리한 내용들을 더 다듬어 블로그에 올려보려 한다 🔥🔥
