--- a/_posts/2025-02-07-GM-Pandas.md
+++ b/_posts/2025-02-07-GM-Pandas.md
@@ -54,6 +54,7 @@ display(one_person_ratio.head())
 **결과 분석:**
 - 1인 가구 비율 높은 지역에서는 배달 서비스, 무인 상점, 정기 구독 서비즈의 수요가 높을 가능성 큼
 - 이 데이터를 바탕으로 특정 지역에서 실험적인 프로모션 실행 가능  
+
 **비즈니스 적용 예시:**
 - 1인 가구 밀집 지역에 맞춤형 비즈니스(예: 소형 오피스텔, 미니마트, 무인 세탁소 등)
 
@@ -70,11 +71,13 @@ display(low_outdoor_areas.head())
 
 **결과 분석:**
 - 외출이 적은 지역에서는 간편식, 신선식품 정기 배송, 온라인 쇼핑 관련 프로모션이 효과적일 가능성 큼  
+
 **비즈니스 적용 예시:**
 - 집에서 이용 가능한 서비스(예: 신선식품 배달, 홈카페 서비스, 온라인 모임 플랫폼)
 
 #### **3단계: 프로모션 전략 수립 및 실험 (A/B 테스트)**  
 최적의 프로모션 방식을 찾기 위해 **A/B 테스트를 실행**하여 성과를 비교한다.  
+
 **A/B 테스트 예제**
 > A안: "첫 구매 시 5천 원 할인"
 >
@@ -92,12 +95,15 @@ display(high_work_areas.head())
 ![Image](https://github.com/user-attachments/assets/67d18393-5def-44c5-80e4-7de5f7522a18)
 
 **결과 분석:**
-- 직장인 비율 높은 지역에서는 야간 헬스장 쿠폰, 단백질 보충제 할인, 건강식 배달 서비스 프로모션이 효과적일 가능성 큼  
+- 직장인 비율 높은 지역에서는 야간 헬스장 쿠폰, 단백질 보충제 할인,  
+건강식 배달 서비스 프로모션이 효과적일 가능성 큼  
+
 **비즈니스 적용 예시:**
 - 직장인 대상 편의 서비스(예: 퇴근 후 24시간 세탁 서비스, 건강 간편식, 피로 회복 제품)
 
 #### **4단계: 프로모션 실행 및 바이럴 마케팅 적용**  
 **최적의 프로모션을 실행**하고, SNS, 친구 추천, 인풀루언서 마케팅 등 바이럴 요소를 포함해야 한다.  
+
 **SNS 마케팅 예제**
 > "구매 후 SNS 인증 시 추가 할인 제공"
 >
@@ -115,7 +121,8 @@ display(video_usage_areas.head())
 ![Image](https://github.com/user-attachments/assets/2e59c1bc-3feb-45af-aecd-e70082c4a862)
 
 **결과 분석:**
-- 동영상 소비가 많은 지역에서는 넷플릭스 같은 OTT 서비스 할인, 스마트 TV 프로모션이 효과적일 가능성 큼  
+- 동영상 소비가 많은 지역에서는 넷플릭스 같은 OTT 서비스 할인, 스마트 TV 프로모션이 효과적일 가능성 큼
+
 **비즈니스 적용 예시:**
 - **지역 맞춤형 콘텐츠 서비스**(예: VR 영화관, OTT 플랫폼 지역 특화 콘텐츠 제공)
 
@@ -143,7 +150,8 @@ display(video_usage_areas.head())
 #### **시나리오 1: 외출이 적은 1인 가구 대상 "프리미엄 배달 서비스"**
 
 **목표:**  
- 외출이 적은 1인 가구가 많은 지역에서 즉석 조리식품, 신선식품 정기 배달, 생필품 구독 서비스의 수요를 분석하여 최적의 상품을 추천
+ 외출이 적은 1인 가구가 많은 지역에서 즉석 조리식품, 신선식품 정기 배달,  
+ 생필품 구독 서비스의 수요를 분석하여 최적의 상품을 추천
 
 **타겟 고객:**
 - 평일과 주말에 외출이 적은 1인 가구
@@ -168,7 +176,8 @@ print(low_outdoor_areas.head(5))
 #### **시나리오 2: 생활 서비스 이용이 많은 지역 대상 "홈 케어 & 가사 서비스"**
 
 **목표:**  
- 생활 서비스 이용이 많은 지역에서 무인 세탁 서비스, 가사도우미, 정리정돈 서비스 등의 수요를 분석하여 최적의 상품을 추천
+ 생활 서비스 이용이 많은 지역에서 무인 세탁 서비스, 가사도우미, 정리정돈 서비스 등의 수요를 분석하여  
+ 최적의 상품을 추천
 
 **타겟 고객:**
 - 집안일을 직접 하기 어려운 직장인 및 바쁜 1인 가구
@@ -194,7 +203,8 @@ print(service_usage_areas.head(5))
 
 **목표:**
 
- 재정 상태에 대한 관심이 높은 소비자를 대상으로 소액 투자 플랫폼, 저축 상품, 재테크 컨설팅 서비스의 수요 분석하여 최적의 상품 추천
+ 재정 상태에 대한 관심이 높은 소비자를 대상으로 소액 투자 플랫폼, 저축 상품, 재테크 컨설팅 서비스의  
+ 수요 분석하여 최적의 상품 추천
 
 **타겟 고객**:
 
@@ -211,7 +221,8 @@ finance_interest_areas = df_single.groupby("자치구")["재정관심_비율"].m
 # 상위 5개 지역 출력
 print(finance_interest_areas.head(5))
 ```
-![Image](https://github.com/user-attachments/assets/b55d921e-80dc-42a4-8663-a60ea3e73e2d)  
+![Image](https://github.com/user-attachments/assets/b55d921e-80dc-42a4-8663-a60ea3e73e2d) 
+ 
 **마케팅 전략**:  
 - 소액 투자 가입 시 첫 투자금 5천 원 지급
 - 재테크 교육 프로그램 무료 제공 (월 1회 온라인 세미나)
