--- a/_posts/2025-02-07-GM-Pandas.md
+++ b/_posts/2025-02-07-GM-Pandas.md
@@ -1,7 +1,7 @@
 ---
 title: "[GM 예제] 1인가구 비즈니스 설계"
 date: 2025-02-07 20:00:00 +09:00
-categories: [GM, Python]
+categories: [GM, Scenario Design]
 tags:
   [
     GM,
@@ -38,9 +38,9 @@ print(df_single.info())
 ```
 ![Image](https://github.com/user-attachments/assets/cf6f58a1-5429-4b9d-bf18-ef6cf49365fb)
 
-<span style="color:orange"> 🖐️여기서부터 그로스 마케팅 프로모션 절차 시작 ! </span>
+<span style="background-color: #F7DDBE;"> 🖐️여기서부터 그로스 마케팅 프로모션 절차 시작 !</span>
 
-#### **1단계: 데이터 분석 통한 고객 타겟팅**  
+#### <span style="color:orange">**1단계: 데이터 분석 통한 고객 타겟팅**</span>
 데이터 기반으로 **타겟 고객을 세분화**하고, 각 그룹별 **소비 패턴과 니즈를 파악**해야 한다.
 ```python
 # 자치구별 1인 가구 비율 분석
@@ -58,7 +58,7 @@ display(one_person_ratio.head())
 **비즈니스 적용 예시:**
 - 1인 가구 밀집 지역에 맞춤형 비즈니스(예: 소형 오피스텔, 미니마트, 무인 세탁소 등)
 
-#### **2단계: 가장 적합한 상품 선정**  
+#### <span style="color:orange">**2단계: 가장 적합한 상품 선정**</span>  
 각 고객 그룹별로 **가장 잘 팔릴 상품을 선정**하고, 맞춤형 프로모션 전략을 수립해야 한다.
 ```python
 # 외출 적은 지역에서 배달 서비스 수요 분석
@@ -75,7 +75,7 @@ display(low_outdoor_areas.head())
 **비즈니스 적용 예시:**
 - 집에서 이용 가능한 서비스(예: 신선식품 배달, 홈카페 서비스, 온라인 모임 플랫폼)
 
-#### **3단계: 프로모션 전략 수립 및 실험 (A/B 테스트)**  
+#### <span style="color:orange">**3단계: 프로모션 전략 수립 및 실험 (A/B 테스트)**</span>  
 최적의 프로모션 방식을 찾기 위해 **A/B 테스트를 실행**하여 성과를 비교한다.  
 
 **A/B 테스트 예제**
@@ -101,7 +101,7 @@ display(high_work_areas.head())
 **비즈니스 적용 예시:**
 - 직장인 대상 편의 서비스(예: 퇴근 후 24시간 세탁 서비스, 건강 간편식, 피로 회복 제품)
 
-#### **4단계: 프로모션 실행 및 바이럴 마케팅 적용**  
+#### <span style="color:orange">**4단계: 프로모션 실행 및 바이럴 마케팅 적용**  
 **최적의 프로모션을 실행**하고, SNS, 친구 추천, 인풀루언서 마케팅 등 바이럴 요소를 포함해야 한다.  
 
 **SNS 마케팅 예제**
@@ -126,7 +126,7 @@ display(video_usage_areas.head())
 **비즈니스 적용 예시:**
 - **지역 맞춤형 콘텐츠 서비스**(예: VR 영화관, OTT 플랫폼 지역 특화 콘텐츠 제공)
 
-#### **5단계: 프로모션 성과 분석 및 최적화**  
+#### <span style="color:orange">**5단계: 프로모션 성과 분석 및 최적화**</span>  
 실행한 프로모션의 효과를 측정하고 구매 전환율, 재구매율, CAC(고객 획득 비용) 등을 비교하여 최적화한다.
 
 **측정해야 할 지표:**
@@ -134,7 +134,7 @@ display(video_usage_areas.head())
 - **재구매율 (Retention Rate)**: 한 번 구매 후 다시 구매하는 고객 비율
 - **고객 획득 비용 (CAC)**: 한 명의 신규 고객을 확보하는 데 드는 마케팅 비용
 
-#### **6단계: 반복 최적화 및 확장**  
+#### <span style="color:orange">**6단계: 반복 최적화 및 확장**</span>  
 가장 효과적인 프로모션 전략을 확인한 후, 더 많은 지역과 채널로 확장해야 한다.
 
 - A/B 테스트 결과 **전환율이 높은 프로모션을 전국적으로 확대**
@@ -147,7 +147,7 @@ display(video_usage_areas.head())
 
 시나리오는 데이터 기반으로 **소비자 특성 분석 → 수요 높은 상품 선정 → 마케팅 전략 적용** 흐름을 따른다.
 
-#### **시나리오 1: 외출이 적은 1인 가구 대상 "프리미엄 배달 서비스"**
+#### **📝시나리오 1: 외출이 적은 1인 가구 대상 "프리미엄 배달 서비스"**
 
 **목표:**  
  외출이 적은 1인 가구가 많은 지역에서 즉석 조리식품, 신선식품 정기 배달,  
@@ -173,7 +173,7 @@ print(low_outdoor_areas.head(5))
 - 첫 달 무료 구독 이벤트 + 친구 추천 할인
 - 무인 배달함 설치 및 심야 배송 옵션 추가
 
-#### **시나리오 2: 생활 서비스 이용이 많은 지역 대상 "홈 케어 & 가사 서비스"**
+#### **📝시나리오 2: 생활 서비스 이용이 많은 지역 대상 "홈 케어 & 가사 서비스"**
 
 **목표:**  
  생활 서비스 이용이 많은 지역에서 무인 세탁 서비스, 가사도우미, 정리정돈 서비스 등의 수요를 분석하여  
@@ -199,7 +199,7 @@ print(service_usage_areas.head(5))
 - 정기 구독 서비스 제공 (월 3회 방문, 정리정돈 & 세탁 서비스 패키지)
 - 기업과 제휴하여 직원 복지 프로그램 포함
 
-#### **시나리오 3: 재정 상태에 관심 많은 소비자 대상 "소액 투자 & 금융 상품"**
+#### **📝시나리오 3: 재정 상태에 관심 많은 소비자 대상 "소액 투자 & 금융 상품"**
 
 **목표:**
 
@@ -222,7 +222,7 @@ finance_interest_areas = df_single.groupby("자치구")["재정관심_비율"].m
 print(finance_interest_areas.head(5))
 ```
 ![Image](https://github.com/user-attachments/assets/b55d921e-80dc-42a4-8663-a60ea3e73e2d) 
- 
+
 **마케팅 전략**:  
 - 소액 투자 가입 시 첫 투자금 5천 원 지급
 - 재테크 교육 프로그램 무료 제공 (월 1회 온라인 세미나)
