--- a/_posts/2025-02-20-보고서-고객행동패턴.md
+++ b/_posts/2025-02-20-보고서-고객행동패턴.md
@@ -1,5 +1,5 @@
 ---
-title: "[재구매율 향상 목표] 고객 행동 패턴 분석 보고서"
+title: "[GM 보고서] 재구매율 향상 목표"
 date: 2025-02-20 19:00:00 +09:00
 categories: [GM, Report]
 tags:
@@ -27,7 +27,7 @@ tags:
 
 **개선 방향**
 - 신규 고객 유입이 향상된 것으로 보아, 추가적인 향상을 위해 현재의 마케팅 예산을  
-증액하는 것 추천 (기존 마케팅 금액의 10% 이상 증액할 것을 권장
+증액하는 것 추천 (기존 마케팅 금액의 10% 이상 증액할 것을 권장)
 - 신규 고객 확보에 집중하되, 이탈하는 기존 고객을 Retention 하기 위해 기존 고객을 위한  
 마케팅 예산도 증액할 것을 권장함
 
