--- a/_posts/2025-03-04-Tableau-기본사용법.md
+++ b/_posts/2025-03-04-Tableau-기본사용법.md
@@ -1,7 +1,7 @@
 ---
 title: "[Tableau] 기본 사용법"
 date: 2025-03-04 19:00:00 +09:00
-categories: [GM, Tableau]
+categories: [GM, 시각화]
 tags:
   [
     Tableau,
