--- a/_posts/2025-03-05-Tableau-서울시상권분석.md
+++ b/_posts/2025-03-05-Tableau-서울시상권분석.md
@@ -1,7 +1,7 @@
 ---
 title: "[Tableau] 서울시 상권 분석"
 date: 2025-03-05 21:00:00 +09:00
-categories: [GM, Tableau]
+categories: [GM, 시각화]
 tags:
   [
     Tableau,
