--- a/_posts/2025-02-10-GCP-VM.md
+++ b/_posts/2025-02-10-GCP-VM.md
@@ -1,11 +1,9 @@
 ---
 title: "[GCP] VM 설정"
 date: 2025-02-10 20:00:00 +09:00
-categories: [GM, GCP]
+categories: [GCP]
 tags:
   [
-    GM,
-    그로스마케팅,
     GCP,
     VM,
     가상머신
