--- a/_posts/2025-03-12-Web-고객구매예측.md
+++ b/_posts/2025-03-12-Web-고객구매예측.md
@@ -305,5 +305,5 @@ python 실행
 VM의 외부 IP로 웹사이트 접속 (포트 5001)  
 ![Image](https://github.com/user-attachments/assets/5d402cf4-9ce4-44e6-9810-6142047294d2)
 
-고객 구매 예측 !  
+<span style="background-color: #F7DDBE;">고객 구매 예측 !</span>  
 ![Image](https://github.com/user-attachments/assets/2a13e7ff-56dc-4c95-a418-81e355042928) ![Image](https://github.com/user-attachments/assets/74253c7e-bed9-4fea-afd4-c5db059e3c6c)
