--- a/_posts/2025-02-07-예제-1인가구.md
+++ b/_posts/2025-02-07-예제-1인가구.md
@@ -1,7 +1,7 @@
 ---
 title: "[GM 예제] 1인가구 비즈니스 설계"
 date: 2025-02-07 20:00:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
