--- a/_posts/2025-02-20-예제-고객행동패턴.md
+++ b/_posts/2025-02-20-예제-고객행동패턴.md
@@ -1,7 +1,7 @@
 ---
 title: "[GM 예제] 고객 행동 패턴 분석"
 date: 2025-02-20 10:00:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
