--- a/_posts/2025-03-12-예제-구독플랜추천.md
+++ b/_posts/2025-03-12-예제-구독플랜추천.md
@@ -1,7 +1,7 @@
 ---
 title: "[회귀분석] 고객 활동 기반 구독 플랜 추천"
 date: 2025-03-12 18:15:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
