--- a/_posts/2025-02-11-예제-성과분석(sql활용).md
+++ b/_posts/2025-02-11-예제-성과분석(sql활용).md
@@ -1,7 +1,7 @@
 ---
 title: "[SQL] GM 성과 분석 예제"
 date: 2025-02-11 23:00:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
