--- a/_posts/2025-03-12-예제-광고전환율예측.md
+++ b/_posts/2025-03-12-예제-광고전환율예측.md
@@ -1,7 +1,7 @@
 ---
 title: "[회귀분석] 광고 캠페인 전환율 예측"
 date: 2025-03-12 17:30:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
