--- a/_posts/2025-03-12-예제-구독기간예측.md
+++ b/_posts/2025-03-12-예제-구독기간예측.md
@@ -1,7 +1,7 @@
 ---
 title: "[회귀분석] 구독 기간 예측"
 date: 2025-03-12 18:15:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
