--- a/_posts/2025-03-12-예제-이메일캠페인-반응예측.md
+++ b/_posts/2025-03-12-예제-이메일캠페인-반응예측.md
@@ -1,7 +1,7 @@
 ---
 title: "[회귀분석] 이메일 마케팅 캠페인 반응 예측"
 date: 2025-03-12 18:00:00 +09:00
-categories: [GM, Scenario Design]
+categories: [GM, Scenario | Analysis]
 tags:
   [
     GM,
