--- a/_posts/2025-03-26-프로젝트1-기획서.md
+++ b/_posts/2025-03-26-프로젝트1-기획서.md
@@ -15,7 +15,7 @@ tags:
 
 # **🍀그린캠프 페스티벌 티켓 판매를 위한 마케팅🎉**
 
-<img src="https://Zihyeoni.github.io/assets/img/project기획-1.png">
+<img src="https://Zihyeoni.github.io/Zihyeoni.github.io/assets/img/project기획-1.png">
 
 ---
 
