--- a/_posts/2025-04-03-프로젝트1-A.md
+++ b/_posts/2025-04-03-프로젝트1-A.md
@@ -16,4 +16,4 @@ tags:
 
 # **LP 🅰️버전**
 
-<img src="https://Zihyeoni.github.io/assets/img/project-LPa.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-LPa.png)
