--- a/_posts/2025-04-11-프로젝트1-Zapier.md
+++ b/_posts/2025-04-11-프로젝트1-Zapier.md
@@ -36,4 +36,4 @@ tags:
   - 호텔권/캠핑권 요약 + 한정수량 강조
   - 전 고객 대상 브로드캐스팅
 
-<img src="https://Zihyeoni.github.io/assets/img/project-zapier.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-zapier.png)
