--- a/_posts/2025-04-11-프로젝트1-광고기획.md
+++ b/_posts/2025-04-11-프로젝트1-광고기획.md
@@ -19,16 +19,16 @@ tags:
 
 ### **광고 기획 (소구점)**
 
-<img src="https://Zihyeoni.github.io/assets/img/project-광고소구점.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-광고소구점.png)
 
 ### **광고 디자인**
 
-<img src="https://Zihyeoni.github.io/assets/img/project-소구점A.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-소구점A.png)
 
-<img src="https://Zihyeoni.github.io/assets/img/project-소구점.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-소구점.png)
 
-<img src="https://Zihyeoni.github.io/assets/img/project-소구점E.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-소구점E.png)
 
-<img src="https://Zihyeoni.github.io/assets/img/project-소구점F.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-소구점F.png)
 
-<img src="https://Zihyeoni.github.io/assets/img/project-추가광고.png">
+![Image](https://Zihyeoni.github.io/assets/img/project-추가광고.png)
