--- a/_posts/2025-06-05-자격증-ADsP.md
+++ b/_posts/2025-06-05-자격증-ADsP.md
@@ -18,7 +18,7 @@ tags:
 ## **데이터분석 준전문가** (**A**dvanced **D**ata Analytics **S**emi-**P**rofessional)
 
 <div style="text-align: center;">
-  <img src="https://Zihyeoni.github.io/assets/img/ADsP/접수.jpg" style="width: 360px;">
+  <img src="https://Zihyeoni.github.io/assets/img/ADsP/접수.jpg" alt="접수" style="width: 360px;">
 </div>
 
 멋사 부트캠프를 수료 중에 데이터 분석 자격증 필요성을 느껴  
